# kitti3d

./: .gitignore  config.json  datagen.py  gt_db_sampler.py  kitti.py  loss.py  model.py  model_sp.py  model_utils.py  params.py  pointcloud2RGB.py  train.py  utils.py  viewer.py
eval_kitti/: README.md  launch_test.sh
ground_anno/: main.py  polyROISelector.py
train_utils/: learning_schedules_fastai.py
voxel_gen/: CMakeLists.txt  __init__.py  clean.sh  voxel_generator.cc
